--- a/res/layout/item_list.xml
+++ b/res/layout/item_list.xml
@@ -16,8 +16,8 @@
  
         <ImageView
             android:id="@+id/list_image"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
+            android:layout_width="40dip"
+            android:layout_height="40dip"
             android:src="@drawable/ic_launcher"/>
  
     </LinearLayout>
@@ -61,10 +61,11 @@
         android:textStyle="bold"/>
  
      <!-- Rightend Arrow -->
-     <ImageView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+     <ImageView 
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/arrow"/>
+        android:src="@drawable/information"
+        android:layout_width="20dip"
+            android:layout_height="20dip"/>
  
 </RelativeLayout>
