--- a/res/layout/zapeat.xml
+++ b/res/layout/zapeat.xml
@@ -6,28 +6,23 @@
 
     <requestFocus />
 
-    <EditText
-        android:id="@+id/login"
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/senha"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/senha"
-        android:layout_marginTop="77dp"
-        android:ems="10"
-        android:hint="@string/login" />
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_launcher" />
 
     <EditText
         android:id="@+id/senha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="159dp"
+        android:layout_centerVertical="true"
         android:ems="10"
         android:hint="@string/senha"
-        android:inputType="textPassword" >
-    </EditText>
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btAutenticar"
@@ -36,16 +31,18 @@
         android:layout_alignLeft="@+id/senha"
         android:layout_alignRight="@+id/senha"
         android:layout_below="@+id/senha"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/shapebutton"
         android:text="@string/autenticar" />
 
-    <ImageView
-        android:id="@+id/logo"
+    <EditText
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher" />
+        android:layout_above="@+id/senha"
+        android:layout_alignLeft="@+id/senha"
+        android:layout_marginBottom="32dp"
+        android:ems="10"
+        android:hint="@string/login" />
 
 </RelativeLayout>
