--- a/res/layout/activity_promocao_list.xml
+++ b/res/layout/activity_promocao_list.xml
@@ -20,6 +20,8 @@
             android:paddingLeft="15dp"
             android:text="@string/atualizar"
             android:textSize="11dp" />
+        
+            <requestFocus />
 
         <Button
             android:id="@+id/btWeb"
@@ -42,7 +44,29 @@
             android:paddingLeft="15dp"
             android:text="@string/sair"
             android:textSize="11dp" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#C0C0C0"
+        android:orientation="horizontal" >
+
+        <EditText
+            android:id="@+id/filtroDistancia"
+            android:layout_width="77dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textSize="11dp" >
+        </EditText>
+
+        <Button
+            android:id="@+id/btFiltrarDIstancia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_action_search"
+            android:text="@string/filtrar_distancia"
+            android:textSize="10dp" />
     </LinearLayout>
 
     <ListView
