--- a/res/menu/activity_map_view.xml
+++ b/res/menu/activity_map_view.xml
@@ -1,14 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/promocoes"
+        android:id="@+id/filtrarMapa"
+        android:icon="@drawable/filter"
+        android:title="@string/filtrar"/>
+    <item
+        android:id="@+id/webMapa"
+        android:icon="@drawable/www"
+        android:title="@string/web"/>
+    <item
+        android:id="@+id/promocoesMapa"
         android:icon="@drawable/talheres"
         android:title="@string/promocoes"/>
-    <item
-        android:id="@+id/mapa"
-        android:icon="@drawable/mapa"
-        android:title="@string/mapa"/>
     <item
         android:id="@+id/sair"
         android:icon="@drawable/logout"
