--- a/res/layout/zapeat.xml
+++ b/res/layout/zapeat.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/shapebutton" >
+    android:background="#FF9900" >
 
     <ImageView
         android:id="@+id/logo"
