--- a/res/layout/zapeat.xml
+++ b/res/layout/zapeat.xml
@@ -1,16 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FF9900" >
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFC116"
+    android:gravity="fill_vertical" >
     
     <requestFocus/>
     
@@ -19,10 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/senha"
-        android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
-        android:layout_below="@+id/logo"
         android:hint="@string/email" />
 
     <EditText
