--- a/res/layout/zapeat.xml
+++ b/res/layout/zapeat.xml
@@ -1,32 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
     android:background="#FFC116"
     android:gravity="fill_vertical" >
-    
-    <requestFocus/>
-    
-    <EditText
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/senha"
-        android:layout_marginBottom="32dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="@string/email" />
 
-    <EditText
-        android:id="@+id/senha"
+    <requestFocus />
+
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:ems="10"
-        android:layout_below="@+id/login"
-        android:hint="@string/senha"
-        android:inputType="textPassword" />
+        android:layout_marginBottom="23dp"
+        android:src="@drawable/ic_launcher" />
 
     <Button
         android:id="@+id/btAutenticar"
@@ -35,9 +24,27 @@
         android:layout_alignLeft="@+id/senha"
         android:layout_alignRight="@+id/senha"
         android:layout_below="@+id/senha"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="163dp"
         android:background="@drawable/shapebutton"
         android:text="@string/autenticar" />
-    
+
+    <EditText
+        android:id="@+id/senha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="@string/senha"
+        android:inputType="textPassword" />
+
+    <EditText
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="@string/email" />
 
 </RelativeLayout>
