--- a/res/layout/item_list.xml
+++ b/res/layout/item_list.xml
@@ -5,67 +5,45 @@
     android:background="@drawable/list_selector"
     android:orientation="horizontal"
     android:padding="5dip" >
- 
-    <!--  ListRow Left sied Thumbnail image -->
-    <LinearLayout android:id="@+id/thumbnail"
+
+    <!-- ListRow Left sied Thumbnail image -->
+
+    <LinearLayout
+        android:id="@+item_list/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dip"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dip">
- 
-        <ImageView
-            android:id="@+id/list_image"
-            android:layout_width="40dip"
-            android:layout_height="40dip"
-            android:src="@drawable/ic_launcher"/>
- 
+        android:layout_marginRight="5dip"
+        android:padding="3dip" >
     </LinearLayout>
- 
-    <!-- Title Of Song-->
+
+    <!-- Title Of Song -->
+
     <TextView
-        android:id="@+id/titulo_promocao"
+        android:id="@+item_list/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/thumbnail"
-        android:layout_toRightOf="@+id/thumbnail"
+        android:layout_alignTop="@+item_list/thumbnail"
+        android:layout_toRightOf="@+item_list/thumbnail"
         android:text="Rihanna Love the way lie"
         android:textColor="#040404"
-        android:typeface="sans"
-        android:textSize="15dip"
-        android:textStyle="bold"/>
- 
-    <!-- Artist Name -->
-    <TextView
-        android:id="@+id/descricao_promocao"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/titulo_promocao"
-        android:textColor="#343434"
-        android:textSize="10dip"
-        android:layout_marginTop="1dip"
-        android:layout_toRightOf="@+id/thumbnail"
-        android:text="Just gona stand there and ..." />
- 
-    <!-- Rightend Duration -->
-    <TextView
-        android:id="@+id/duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/titulo_promocao"
-        android:gravity="right"
-        android:layout_marginRight="5dip"
-        android:textSize="10dip"
-        android:textColor="#10bcc9"
-        android:textStyle="bold"/>
- 
-     <!-- Rightend Arrow -->
-     <ImageView 
+        android:textSize="20dip"
+        android:textStyle="bold"
+        android:typeface="sans" />
+
+    <ImageView android:id="@+item_list/arrow"
+        android:layout_width="20dip"
+        android:layout_height="20dip"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/information"
-        android:layout_width="20dip"
-            android:layout_height="20dip"/>
- 
+        android:src="@drawable/list_item_arrow" />
+
+    <TextView
+        android:id="@+item_list/quantidade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+item_list/arrow"
+        android:text="0" />
+
 </RelativeLayout>
