--- a/res/drawable-hdpi/gradient_bg_over.xml
+++ b/res/drawable-hdpi/gradient_bg_over.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
   <gradient
-      android:startColor="#18d7e5"
-      android:centerColor="#16cedb"
-      android:endColor="#09adb9"
+      android:startColor="#ffffad"
+      android:centerColor="#ffffad"
+      android:endColor="#ffffad"
       android:angle="270" />
 </shape>
