--- a/res/drawable/shapebutton.xml
+++ b/res/drawable/shapebutton.xml
@@ -2,18 +2,19 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
      
     <gradient
-        android:startColor="#FFFAF0"
-        android:endColor="#C0C0C0"
+        android:startColor="#3373a5"
+        android:endColor="#3373a5"
         android:angle="270" />
+    
+     <stroke android:width="1dp" android:color="#b3b3b3"/>
      
-    <stroke
-        android:width="1dp"
-        android:color="#FFA500" />
-     
+    <corners android:topLeftRadius="10dp"
+         android:topRightRadius="10dp"/>
+
     <padding
-        android:left="15dp"
-        android:top="15dp"
-        android:right="15dp"
-        android:bottom="15dp" />
+        android:left="7dp"
+        android:top="7dp"
+        android:right="7dp"
+        android:bottom="7dp" />
      
 </shape>
